--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,15 @@ android:
     - extra-android-m2repository
     - extra-google-m2repository
     - extra-android-supportsys
-    - img-armeabi-v7a-android-23
+    - sys-img-armeabi-v7a-android-22
   licenses:
     - android-sdk-license-.+
     - 'google-gdk-license-.+'
     - '.+'
-  before_script:
-    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
