--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ android:
     - tools
     - platform-tools
     - tools
-    - build-tools-22.0.1
+    - build-tools-25.0.1
     - android-22
     - extra-android-m2repository
     - extra-google-m2repository
     - extra-android-supportsys
     - sys-img-armeabi-v7a-android-22
   licenses:
-    - android-sdk-license-.+
+    - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
     - '.+'
 
