--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,17 @@ jdk: oraclejdk8
 android:
   components:
     - tools
-    - platform-tools
-    - tools
+#    - platform-tools
+#    - tools
     - build-tools-25.0.1
     - android-25
     - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-android-supportsys
-    - sys-img-armeabi-v7a-android-25
-  licenses:
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-    - '.+'
+#    - extra-google-m2repository
+#    - extra-android-supportsys
+#    - sys-img-armeabi-v7a-android-25
+#  licenses:
+#    - 'android-sdk-license-.+'
+#    - 'google-gdk-license-.+'
+#    - '.+'
 
 script: ./gradlew testDebug
