--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ android:
     - android-25
     - extra-android-m2repository
 
-script: ./gradlew testDebug
+script:
+ ./gradlew testDebug
+ ./gradlew androidTest
