--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ android {
 
     defaultConfig {
         applicationId "it.niedermann.owncloud.notes"
-        testApplicationId "it.niedermann.owncloud.notes"
         minSdkVersion 11
         targetSdkVersion 25
         versionCode 14
@@ -35,5 +34,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    androidTestCompile "junit:junit:4.12"
+    androidTestCompile ('com.android.support.test:runner:0.5') { exclude module: 'support-annotations' }
+//    androidTestCompile "junit:junit:4.12"
 }
