--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    androidTestCompile ('com.android.support.test:runner:0.5') { exclude module: 'support-annotations' }
+    testCompile ('com.android.support.test:runner:0.5') { exclude module: 'support-annotations' }
 //    androidTestCompile "junit:junit:4.12"
 }
